--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="contact">
                 <a href="https://www.linkedin.com/in/karen-villasenor-a49170308">www.linkedin.com/in/karen-villasenor-a49170308</a>
                 ● 312.619.0649 ●  
-                <a href="mailto:karencvillasenor@lewisu.edu">karencvillasenor@lewisu.edu</a> 
+                <a href="mailto:karencvill@gmail.com">karencvill@gmail.com</a> 
                 ● Bolingbrook, IL
         </section>
 
