--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         </div>
 
         <section class="contact">
+            <div>
+
                 <a href="https://www.linkedin.com/in/karen-villasenor-a49170308">www.linkedin.com/in/karen-villasenor-a49170308</a>
                 ● 312.619.0649 ●  
                 <a href="mailto:karencvill@gmail.com">karencvill@gmail.com</a> 
                 ● Bolingbrook, IL
+            </div>
         </section>
 
         <section class="education">
